--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ body {
   width: 15%;
   max-width: 225px;
   height: 100%;
-  border: 1px solid black;
+  border-radius: 2px solid #f2f6fa;
 }
 .main {
   flex: 1;
@@ -32,12 +32,19 @@ body {
 }
 .header {
   width: 100%;
-  height: 75px;
-  border: 1px solid black;
+  height: 90px;
+  border-bottom: 2px solid #f2f6fa;
 }
 .main_content {
   width: 100%;
-  max-width: 1440px;
   flex: 1;
-  border: 1px solid black;
+  background-color: #f5f7fa;
+  display: flex;
+  justify-content: center;
+}
+.wrapper {
+  width: 100%;
+  max-width: 1440px;
+  height: 100%;
+  padding: 1rem 0rem;
 }
