--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&display=swap");
+.ibm-plex-sans-1023 {
+  font-family: "IBM Plex Sans", serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
 .poppins-regular {
   font-family: "Poppins", serif;
   font-weight: 400;
@@ -65,5 +73,4 @@ body {
   width: 100%;
   max-width: 1440px;
   height: 100%;
-  padding: 1rem 0rem;
 }
