--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ body {
   height: 100%;
 }
 .app {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
   display: flex;
 }
@@ -55,7 +55,7 @@ body {
   height: 100%;
 }
 .main {
-  flex: 1;
+  width: 85%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -79,4 +79,9 @@ body {
   width: 100%;
   max-width: 1440px;
   height: 100%;
+}
+@media only screen and (max-width: 550px) {
+  .main {
+    width: "82%";
+  }
 }
