--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ body {
   height: 100%;
 }
 .app {
-  max-width: 100%;
+  width: 100%;
   height: 100%;
   display: flex;
 }
@@ -55,7 +55,7 @@ body {
   height: 100%;
 }
 .main {
-  width: 85%;
+  flex: 1;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -82,6 +82,6 @@ body {
 }
 @media only screen and (max-width: 550px) {
   .main {
-    width: "82%";
+    max-width: 85%;
   }
 }
