--- a/src/components/LoanLine.module.css
+++ b/src/components/LoanLine.module.css
@@ -4,6 +4,7 @@
   padding: 8px;
   margin-top: 40px;
   align-self: center;
+  justify-self: center;
   aspect-ratio: 1;
   border-radius: 50%;
   background: #25b09b;
